--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -128,6 +128,8 @@ set_real_ip_from 123.253.35.32;
 set_real_ip_from 125.212.241.131;
 set_real_ip_from 128.127.180.156;
 set_real_ip_from 128.31.0.13;
+set_real_ip_from 130.0.233.34;
+set_real_ip_from 130.0.236.83;
 set_real_ip_from 130.193.10.21;
 set_real_ip_from 130.193.15.186;
 set_real_ip_from 138.59.18.110;
@@ -153,9 +155,7 @@ set_real_ip_from 149.202.79.129;
 set_real_ip_from 149.56.22.133;
 set_real_ip_from 149.56.44.47;
 set_real_ip_from 15.204.238.148;
-set_real_ip_from 15.204.240.101;
 set_real_ip_from 154.16.116.61;
-set_real_ip_from 154.213.184.42;
 set_real_ip_from 154.213.184.5;
 set_real_ip_from 154.213.185.133;
 set_real_ip_from 154.213.185.165;
@@ -184,6 +184,7 @@ set_real_ip_from 154.216.19.10;
 set_real_ip_from 154.216.19.230;
 set_real_ip_from 154.216.19.232;
 set_real_ip_from 154.26.159.157;
+set_real_ip_from 158.51.124.253;
 set_real_ip_from 158.69.1.13;
 set_real_ip_from 160.119.249.240;
 set_real_ip_from 162.19.214.213;
@@ -225,6 +226,7 @@ set_real_ip_from 172.81.132.94;
 set_real_ip_from 173.237.206.68;
 set_real_ip_from 173.249.57.253;
 set_real_ip_from 173.255.198.243;
+set_real_ip_from 173.44.141.34;
 set_real_ip_from 176.118.193.33;
 set_real_ip_from 176.121.81.51;
 set_real_ip_from 176.227.215.50;
@@ -676,6 +678,7 @@ set_real_ip_from 195.47.238.87;
 set_real_ip_from 195.47.238.90;
 set_real_ip_from 195.47.238.93;
 set_real_ip_from 195.80.151.242;
+set_real_ip_from 195.88.74.206;
 set_real_ip_from 198.251.84.163;
 set_real_ip_from 198.251.84.237;
 set_real_ip_from 198.251.88.18;
@@ -814,7 +817,7 @@ set_real_ip_from 2001:910:1400:107::2;
 set_real_ip_from 2001:ac8:22:43::20e5:a7d7;
 set_real_ip_from 2001:b011:4006:9e54::b;
 set_real_ip_from 2001:b030:2422::7234;
-set_real_ip_from 2001:bc8:1600:472a::1;
+set_real_ip_from 2001:bc8:1640:317d:dc00:ff:fe39:7bb3;
 set_real_ip_from 2001:bf0:666::666;
 set_real_ip_from 2001:df7:7400:c10d:216:3eff:fecd:511a;
 set_real_ip_from 2001:df7:7e80:100:9f2b:1d15:c713:52ad;
@@ -923,6 +926,7 @@ set_real_ip_from 23.137.253.110;
 set_real_ip_from 23.137.253.27;
 set_real_ip_from 23.153.248.33;
 set_real_ip_from 23.153.248.34;
+set_real_ip_from 23.154.177.10;
 set_real_ip_from 23.154.177.11;
 set_real_ip_from 23.154.177.12;
 set_real_ip_from 23.154.177.13;
@@ -950,6 +954,7 @@ set_real_ip_from 23.154.177.4;
 set_real_ip_from 23.154.177.5;
 set_real_ip_from 23.154.177.6;
 set_real_ip_from 23.154.177.7;
+set_real_ip_from 23.154.177.8;
 set_real_ip_from 23.154.177.9;
 set_real_ip_from 23.155.24.4;
 set_real_ip_from 23.155.8.104;
@@ -996,8 +1001,8 @@ set_real_ip_from 2602:fccf:310:1::c;
 set_real_ip_from 2602:fef9:100:1100::199;
 set_real_ip_from 2604:2dc0:101:200::162b;
 set_real_ip_from 2604:2dc0:101:200::1dd3;
-set_real_ip_from 2604:2dc0:101:200::2880;
 set_real_ip_from 2604:2dc0:202:300::ed3;
+set_real_ip_from 2604:5040:11:0:4187:d2e2:6684:9532;
 set_real_ip_from 2604:6600:0:42::2;
 set_real_ip_from 2604:b480:3:6::2;
 set_real_ip_from 2605:2700:0:2:a800:ff:fe39:574;
@@ -1282,6 +1287,7 @@ set_real_ip_from 2a09:6301:0:2e1:b492:c29e:f532:42c6;
 set_real_ip_from 2a0a:3840:8078:22:0:504e:16da:1337;
 set_real_ip_from 2a0a:c801:1:5::57;
 set_real_ip_from 2a0b:4140:6c6c::2;
+set_real_ip_from 2a0b:7140:8:1:5054:ff:fe43:9f9;
 set_real_ip_from 2a0b:f4c0:16c:10::1;
 set_real_ip_from 2a0b:f4c0:16c:1::1;
 set_real_ip_from 2a0b:f4c0:16c:11::1;
@@ -1551,7 +1557,6 @@ set_real_ip_from 2a12:a800:2:1:45:80:158:27;
 set_real_ip_from 2a12:bec4:11d3:4a89::1;
 set_real_ip_from 2a12:d8c0:109a:9001::7;
 set_real_ip_from 2a12:dd47:8513::13;
-set_real_ip_from 2a12:dd47:8513::2;
 set_real_ip_from 2a13:d207:0:461::1;
 set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.13.195.22;
