--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -156,6 +156,7 @@ set_real_ip_from 149.56.22.133;
 set_real_ip_from 149.56.44.47;
 set_real_ip_from 15.204.238.148;
 set_real_ip_from 154.16.116.61;
+set_real_ip_from 154.213.184.42;
 set_real_ip_from 154.213.184.5;
 set_real_ip_from 154.213.185.133;
 set_real_ip_from 154.213.185.165;
@@ -234,7 +235,6 @@ set_real_ip_from 176.58.100.98;
 set_real_ip_from 176.58.121.177;
 set_real_ip_from 176.97.114.182;
 set_real_ip_from 176.97.114.202;
-set_real_ip_from 177.149.149.240;
 set_real_ip_from 178.17.170.144;
 set_real_ip_from 178.17.170.223;
 set_real_ip_from 178.17.170.23;
@@ -675,7 +675,7 @@ set_real_ip_from 195.47.238.83;
 set_real_ip_from 195.47.238.84;
 set_real_ip_from 195.47.238.86;
 set_real_ip_from 195.47.238.87;
-set_real_ip_from 195.47.238.90;
+set_real_ip_from 195.47.238.92;
 set_real_ip_from 195.47.238.93;
 set_real_ip_from 195.80.151.242;
 set_real_ip_from 195.88.74.206;
@@ -689,7 +689,6 @@ set_real_ip_from 198.96.155.3;
 set_real_ip_from 198.98.48.31;
 set_real_ip_from 198.98.48.33;
 set_real_ip_from 198.98.48.35;
-set_real_ip_from 198.98.50.199;
 set_real_ip_from 198.98.51.189;
 set_real_ip_from 198.98.51.249;
 set_real_ip_from 198.98.51.52;
@@ -870,7 +869,6 @@ set_real_ip_from 216.239.90.19;
 set_real_ip_from 216.73.159.101;
 set_real_ip_from 216.73.159.75;
 set_real_ip_from 217.12.221.131;
-set_real_ip_from 217.12.221.22;
 set_real_ip_from 217.64.151.21;
 set_real_ip_from 217.79.189.239;
 set_real_ip_from 23.129.64.131;
@@ -1006,7 +1004,6 @@ set_real_ip_from 2604:5040:11:0:4187:d2e2:6684:9532;
 set_real_ip_from 2604:6600:0:42::2;
 set_real_ip_from 2604:b480:3:6::2;
 set_real_ip_from 2605:2700:0:2:a800:ff:fe39:574;
-set_real_ip_from 2605:6400:10:1008:1111:1111:1111:1111;
 set_real_ip_from 2605:6400:10:1060:411f:41d8:11fe:716f;
 set_real_ip_from 2605:6400:10:12b:1877:e308:72b3:41b0;
 set_real_ip_from 2605:6400:10:1362::2;
@@ -1187,7 +1184,6 @@ set_real_ip_from 2a02:2b88:2:48b::1;
 set_real_ip_from 2a02:2b88:2:6ce::1;
 set_real_ip_from 2a02:418:6017::147;
 set_real_ip_from 2a02:418:6017::148;
-set_real_ip_from 2a02:8010:677e:f9d0:215:5dff:fe01:210c;
 set_real_ip_from 2a02:898:218::1;
 set_real_ip_from 2a02:898:218::2;
 set_real_ip_from 2a02:c204:2195:2012::1;
@@ -1557,6 +1553,7 @@ set_real_ip_from 2a12:a800:2:1:45:80:158:27;
 set_real_ip_from 2a12:bec4:11d3:4a89::1;
 set_real_ip_from 2a12:d8c0:109a:9001::7;
 set_real_ip_from 2a12:dd47:8513::13;
+set_real_ip_from 2a12:dd47:8513::2;
 set_real_ip_from 2a13:d207:0:461::1;
 set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.13.195.22;
@@ -1573,6 +1570,7 @@ set_real_ip_from 37.228.129.5;
 set_real_ip_from 37.228.129.63;
 set_real_ip_from 37.48.120.196;
 set_real_ip_from 37.48.70.156;
+set_real_ip_from 38.180.251.10;
 set_real_ip_from 38.97.116.244;
 set_real_ip_from 45.11.229.132;
 set_real_ip_from 45.11.59.28;
@@ -1677,7 +1675,6 @@ set_real_ip_from 51.91.18.151;
 set_real_ip_from 5.196.95.34;
 set_real_ip_from 5.255.100.219;
 set_real_ip_from 5.255.100.227;
-set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.103.235;
 set_real_ip_from 5.255.104.202;
 set_real_ip_from 5.255.111.64;
@@ -1754,7 +1751,6 @@ set_real_ip_from 82.208.23.192;
 set_real_ip_from 82.221.128.191;
 set_real_ip_from 82.221.131.5;
 set_real_ip_from 82.221.139.190;
-set_real_ip_from 82.68.49.227;
 set_real_ip_from 82.85.247.254;
 set_real_ip_from 83.217.9.73;
 set_real_ip_from 83.96.213.63;
