--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -695,4 +695,5 @@ deny 2a12:a800:2:1:45:80:158:27;
 deny 2a12:bec4:11d3:4a89::1;
 deny 2a12:d8c0:109a:9001::7;
 deny 2a12:dd47:8513::13;
+deny 2a12:dd47:8513::2;
 deny 2a13:d207:0:461::1;
