--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -696,4 +696,5 @@ allow 2a12:a800:2:1:45:80:158:27;
 allow 2a12:bec4:11d3:4a89::1;
 allow 2a12:d8c0:109a:9001::7;
 allow 2a12:dd47:8513::13;
+allow 2a12:dd47:8513::2;
 allow 2a13:d207:0:461::1;
