--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -154,6 +154,17 @@ allow 149.56.22.133;
 allow 149.56.44.47;
 allow 15.204.238.148;
 allow 154.16.116.61;
+allow 154.213.184.42;
+allow 154.213.184.5;
+allow 154.213.185.133;
+allow 154.213.185.165;
+allow 154.213.185.183;
+allow 154.213.185.185;
+allow 154.213.185.230;
+allow 154.213.185.254;
+allow 154.213.187.66;
+allow 154.213.187.98;
+allow 154.216.16.12;
 allow 154.216.16.13;
 allow 154.216.16.14;
 allow 154.216.16.16;
@@ -554,6 +565,7 @@ allow 185.7.33.146;
 allow 185.82.219.109;
 allow 188.165.200.97;
 allow 188.214.104.21;
+allow 188.239.191.25;
 allow 188.253.7.106;
 allow 188.68.36.28;
 allow 188.68.41.191;
@@ -620,6 +632,8 @@ allow 192.42.116.28;
 allow 192.99.149.111;
 allow 193.105.134.150;
 allow 193.105.134.155;
+allow 193.142.147.233;
+allow 193.142.147.69;
 allow 193.182.96.246;
 allow 193.189.100.194;
 allow 193.189.100.195;
@@ -644,6 +658,7 @@ allow 193.218.118.89;
 allow 193.239.232.102;
 allow 193.26.115.43;
 allow 193.26.115.61;
+allow 193.36.132.21;
 allow 194.15.112.133;
 allow 194.15.113.118;
 allow 194.15.115.212;
@@ -662,8 +677,8 @@ allow 195.47.238.83;
 allow 195.47.238.84;
 allow 195.47.238.86;
 allow 195.47.238.87;
-allow 195.47.238.92;
-allow 195.47.238.93;
+allow 195.47.238.89;
+allow 195.47.238.90;
 allow 195.80.151.242;
 allow 195.88.74.206;
 allow 198.251.84.163;
@@ -812,6 +827,10 @@ allow 201.23.12.101;
 allow 201.23.14.225;
 allow 201.23.16.249;
 allow 202.182.99.129;
+allow 204.137.14.104;
+allow 204.137.14.105;
+allow 204.137.14.106;
+allow 204.137.14.92;
 allow 204.194.29.4;
 allow 204.8.156.142;
 allow 204.85.191.7;
@@ -913,6 +932,7 @@ allow 23.154.177.11;
 allow 23.154.177.12;
 allow 23.154.177.13;
 allow 23.154.177.14;
+allow 23.154.177.15;
 allow 23.154.177.16;
 allow 23.154.177.17;
 allow 23.154.177.18;
@@ -1236,6 +1256,10 @@ allow 2a05:541:110:3e::1;
 allow 2a05:541:112:31::1;
 allow 2a05:541:121:33::1;
 allow 2a05:541:122:49::1;
+allow 2a05:b0c7:6388::1;
+allow 2a05:b0c7:67c6::1;
+allow 2a05:b0c7:6949::1;
+allow 2a05:b0c7:6bd4::1;
 allow 2a06:1280:bee1:2::ee12:230;
 allow 2a06:1700:0:12::1;
 allow 2a06:1700:0:12::2;
@@ -1257,6 +1281,8 @@ allow 2a06:d380:0:103::63;
 allow 2a06:e80:3000:1:bad:babe:ca11:911;
 allow 2a07:e01:2:13::2;
 allow 2a07:e03:2a::bcde;
+allow 2a07:e042:1:181::1;
+allow 2a07:e042:1:182::1;
 allow 2a09:6301:0:2e1:b492:c29e:f532:42c6;
 allow 2a0a:3840:8078:22:0:504e:16da:1337;
 allow 2a0a:c801:1:5::57;
@@ -1437,6 +1463,7 @@ allow 2a0c:e300::23;
 allow 2a0d:bbc7:0:1::254;
 allow 2a0d:bbc7:0:1::320;
 allow 2a0d:bbc7:0:1::394;
+allow 2a0d:c2c0:1:4::2;
 allow 2a0e:4005:1002:ffff:185:40:4:100;
 allow 2a0e:4005:1002:ffff:185:40:4:101;
 allow 2a0e:4005:1002:ffff:185:40:4:132;
@@ -1529,6 +1556,8 @@ allow 2a12:a800:2:1:45:80:158:23;
 allow 2a12:a800:2:1:45:80:158:27;
 allow 2a12:bec4:11d3:4a89::1;
 allow 2a12:d8c0:109a:9001::7;
+allow 2a12:dd47:8513::11;
+allow 2a12:dd47:8513::2;
 allow 2a13:d207:0:461::1;
 allow 31.129.22.65;
 allow 31.13.195.22;
@@ -1552,8 +1581,10 @@ allow 45.118.133.44;
 allow 45.12.3.80;
 allow 45.128.133.242;
 allow 45.129.84.246;
+allow 45.129.84.247;
 allow 45.129.84.249;
 allow 45.132.246.245;
+allow 45.134.225.36;
 allow 45.138.16.107;
 allow 45.138.16.113;
 allow 45.138.16.178;
@@ -1567,6 +1598,7 @@ allow 45.141.215.110;
 allow 45.141.215.111;
 allow 45.141.215.114;
 allow 45.141.215.116;
+allow 45.141.215.133;
 allow 45.141.215.167;
 allow 45.141.215.169;
 allow 45.141.215.17;
@@ -1710,6 +1742,8 @@ allow 77.48.28.236;
 allow 77.48.28.237;
 allow 77.48.28.239;
 allow 77.81.247.72;
+allow 78.142.18.219;
+allow 79.124.8.241;
 allow 80.241.60.207;
 allow 80.67.167.81;
 allow 80.67.172.162;
@@ -1788,6 +1822,7 @@ allow 91.92.109.43;
 allow 92.223.2.140;
 allow 92.243.24.163;
 allow 92.246.138.145;
+allow 92.246.84.133;
 allow 93.113.25.189;
 allow 93.123.12.112;
 allow 93.185.165.211;
