--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -388,6 +388,7 @@ allow 2a04:52c0:126:3ab8::1;
 allow 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 allow 2a04:52c0:130:896e::1;
 allow 2a04:52c0:130:d285::1;
+allow 2a04:9dc0:31::c0cc:4d;
 allow 2a05:541:110:20::1;
 allow 2a05:541:110:3e::1;
 allow 2a05:541:112:31::1;
@@ -594,8 +595,8 @@ allow 2a0b:f4c2::7;
 allow 2a0b:f4c2::8;
 allow 2a0b:f4c2::9;
 allow 2a0c:2500:571:e95:ac02:20d9:b7ed:7819;
+allow 2a0c:5700:3133:1705:be24:11ff:fe0f:9e53;
 allow 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
-allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:e300::23;
 allow 2a0d:bbc7:0:1::254;
 allow 2a0d:bbc7:0:1::320;
@@ -694,5 +695,4 @@ allow 2a12:a800:2:1:45:80:158:27;
 allow 2a12:bec4:11d3:4a89::1;
 allow 2a12:d8c0:109a:9001::7;
 allow 2a12:dd47:8513::11;
-allow 2a12:dd47:8513::2;
 allow 2a13:d207:0:461::1;
