Update lists at 20241120-0600

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -15,7 +15,6 @@ allow 104.167.242.116;
 allow 104.167.242.117;
 allow 104.167.242.118;
 allow 104.192.1.138;
-allow 104.192.3.74;
 allow 104.219.232.126;
 allow 104.219.236.100;
 allow 104.244.72.115;
@@ -153,6 +152,7 @@ allow 149.56.22.133;
 allow 149.56.44.47;
 allow 15.204.238.148;
 allow 154.16.116.61;
+allow 154.213.184.42;
 allow 154.213.184.5;
 allow 154.213.185.133;
 allow 154.213.185.165;
@@ -162,7 +162,6 @@ allow 154.213.185.230;
 allow 154.213.185.254;
 allow 154.213.187.66;
 allow 154.213.187.98;
-allow 154.216.16.12;
 allow 154.216.16.13;
 allow 154.216.16.14;
 allow 154.216.16.16;
@@ -183,7 +182,6 @@ allow 154.216.19.10;
 allow 154.216.19.230;
 allow 154.216.19.232;
 allow 154.26.159.157;
-allow 154.9.228.63;
 allow 158.69.1.13;
 allow 160.119.249.240;
 allow 162.19.214.213;
@@ -198,8 +196,10 @@ allow 162.247.74.204;
 allow 162.247.74.206;
 allow 162.247.74.213;
 allow 162.247.74.216;
+allow 162.247.74.217;
 allow 162.247.74.27;
 allow 162.247.74.7;
+allow 162.247.74.74;
 allow 162.251.5.152;
 allow 163.172.45.102;
 allow 164.132.172.209;
@@ -675,8 +675,8 @@ allow 195.47.238.83;
 allow 195.47.238.84;
 allow 195.47.238.86;
 allow 195.47.238.87;
-allow 195.47.238.92;
-allow 195.47.238.93;
+allow 195.47.238.88;
+allow 195.47.238.91;
 allow 195.80.151.242;
 allow 195.88.74.206;
 allow 198.251.84.163;
@@ -844,6 +844,7 @@ allow 205.185.124.176;
 allow 205.185.124.193;
 allow 205.185.127.231;
 allow 206.206.127.213;
+allow 209.135.170.167;
 allow 209.141.32.181;
 allow 209.141.32.198;
 allow 209.141.37.94;
@@ -934,7 +935,6 @@ allow 23.154.177.16;
 allow 23.154.177.17;
 allow 23.154.177.18;
 allow 23.154.177.19;
-allow 23.154.177.2;
 allow 23.154.177.20;
 allow 23.154.177.21;
 allow 23.154.177.22;
@@ -945,15 +945,9 @@ allow 23.154.177.26;
 allow 23.154.177.27;
 allow 23.154.177.28;
 allow 23.154.177.29;
-allow 23.154.177.3;
 allow 23.154.177.30;
 allow 23.154.177.31;
-allow 23.154.177.4;
-allow 23.154.177.5;
-allow 23.154.177.6;
-allow 23.154.177.7;
 allow 23.154.177.8;
-allow 23.154.177.9;
 allow 23.155.24.4;
 allow 23.155.8.104;
 allow 23.173.216.67;
@@ -984,6 +978,7 @@ allow 2602:2da:0:33:5054:ff:fe6c:39dc;
 allow 2602:2da:0:34:5054:ff:fe7e:7c21;
 allow 2602:2e5::104;
 allow 2602:2e6:0:4::;
+allow 2602:f9f3:0:2::17c;
 allow 2602:fc24:12:3f11:39ca:318:0:1;
 allow 2602:fc24:12:4870:39ca:318:0:1;
 allow 2602:fc24:12:81a6::1;
@@ -1101,7 +1096,6 @@ allow 2605:6400:30:f920:f523:28ef:3617:8b86;
 allow 2605:6400:40:fde8:11c7:119b:aaf9:2722;
 allow 2605:6400:40:fe09::2;
 allow 2605:6400:d814:1b8::4;
-allow 2605:aa80:0:9::3;
 allow 2607:5300:201:3100::2373;
 allow 2607:5300:203:b45b::;
 allow 2607:5300:205:200::3dde;
@@ -1453,7 +1447,7 @@ allow 2a0b:f4c2::7;
 allow 2a0b:f4c2::8;
 allow 2a0b:f4c2::9;
 allow 2a0c:2500:571:e95:ac02:20d9:b7ed:7819;
-allow 2a0c:5700:3133:1705:be24:11ff:fe0f:9e53;
+allow 2a0c:5700:3133:1705:be24:11ff:fe87:1bec;
 allow 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 allow 2a0c:e300::23;
 allow 2a0d:bbc7:0:1::254;
@@ -1553,6 +1547,7 @@ allow 2a12:a800:2:1:45:80:158:27;
 allow 2a12:bec4:11d3:4a89::1;
 allow 2a12:d8c0:109a:9001::7;
 allow 2a12:dd47:8513::11;
+allow 2a12:dd47:8513::2;
 allow 2a13:d207:0:461::1;
 allow 31.129.22.65;
 allow 31.13.195.22;
@@ -1576,7 +1571,6 @@ allow 45.118.133.44;
 allow 45.12.3.80;
 allow 45.128.133.242;
 allow 45.129.84.246;
-allow 45.129.84.249;
 allow 45.132.246.245;
 allow 45.134.225.36;
 allow 45.138.16.107;
