--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -127,6 +127,7 @@ deny 2602:2da:0:33:5054:ff:fe6c:39dc;
 deny 2602:2da:0:34:5054:ff:fe7e:7c21;
 deny 2602:2e5::104;
 deny 2602:2e6:0:4::;
+deny 2602:f9f3:0:2::17c;
 deny 2602:fc24:12:3f11:39ca:318:0:1;
 deny 2602:fc24:12:4870:39ca:318:0:1;
 deny 2602:fc24:12:81a6::1;
@@ -244,7 +245,6 @@ deny 2605:6400:30:f920:f523:28ef:3617:8b86;
 deny 2605:6400:40:fde8:11c7:119b:aaf9:2722;
 deny 2605:6400:40:fe09::2;
 deny 2605:6400:d814:1b8::4;
-deny 2605:aa80:0:9::3;
 deny 2607:5300:201:3100::2373;
 deny 2607:5300:203:b45b::;
 deny 2607:5300:205:200::3dde;
@@ -595,7 +595,7 @@ deny 2a0b:f4c2::7;
 deny 2a0b:f4c2::8;
 deny 2a0b:f4c2::9;
 deny 2a0c:2500:571:e95:ac02:20d9:b7ed:7819;
-deny 2a0c:5700:3133:1705:be24:11ff:fe0f:9e53;
+deny 2a0c:5700:3133:1705:be24:11ff:fe87:1bec;
 deny 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 deny 2a0c:e300::23;
 deny 2a0d:bbc7:0:1::254;
@@ -695,4 +695,5 @@ deny 2a12:a800:2:1:45:80:158:27;
 deny 2a12:bec4:11d3:4a89::1;
 deny 2a12:d8c0:109a:9001::7;
 deny 2a12:dd47:8513::11;
+deny 2a12:dd47:8513::2;
 deny 2a13:d207:0:461::1;
