--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -15,7 +15,6 @@ set_real_ip_from 104.167.242.116;
 set_real_ip_from 104.167.242.117;
 set_real_ip_from 104.167.242.118;
 set_real_ip_from 104.192.1.138;
-set_real_ip_from 104.192.3.74;
 set_real_ip_from 104.219.232.126;
 set_real_ip_from 104.219.236.100;
 set_real_ip_from 104.244.72.115;
@@ -153,6 +152,7 @@ set_real_ip_from 149.56.22.133;
 set_real_ip_from 149.56.44.47;
 set_real_ip_from 15.204.238.148;
 set_real_ip_from 154.16.116.61;
+set_real_ip_from 154.213.184.42;
 set_real_ip_from 154.213.184.5;
 set_real_ip_from 154.213.185.133;
 set_real_ip_from 154.213.185.165;
@@ -162,7 +162,6 @@ set_real_ip_from 154.213.185.230;
 set_real_ip_from 154.213.185.254;
 set_real_ip_from 154.213.187.66;
 set_real_ip_from 154.213.187.98;
-set_real_ip_from 154.216.16.12;
 set_real_ip_from 154.216.16.13;
 set_real_ip_from 154.216.16.14;
 set_real_ip_from 154.216.16.16;
@@ -183,7 +182,6 @@ set_real_ip_from 154.216.19.10;
 set_real_ip_from 154.216.19.230;
 set_real_ip_from 154.216.19.232;
 set_real_ip_from 154.26.159.157;
-set_real_ip_from 154.9.228.63;
 set_real_ip_from 158.69.1.13;
 set_real_ip_from 160.119.249.240;
 set_real_ip_from 162.19.214.213;
@@ -198,8 +196,10 @@ set_real_ip_from 162.247.74.204;
 set_real_ip_from 162.247.74.206;
 set_real_ip_from 162.247.74.213;
 set_real_ip_from 162.247.74.216;
+set_real_ip_from 162.247.74.217;
 set_real_ip_from 162.247.74.27;
 set_real_ip_from 162.247.74.7;
+set_real_ip_from 162.247.74.74;
 set_real_ip_from 162.251.5.152;
 set_real_ip_from 163.172.45.102;
 set_real_ip_from 164.132.172.209;
@@ -675,8 +675,8 @@ set_real_ip_from 195.47.238.83;
 set_real_ip_from 195.47.238.84;
 set_real_ip_from 195.47.238.86;
 set_real_ip_from 195.47.238.87;
-set_real_ip_from 195.47.238.92;
-set_real_ip_from 195.47.238.93;
+set_real_ip_from 195.47.238.88;
+set_real_ip_from 195.47.238.91;
 set_real_ip_from 195.80.151.242;
 set_real_ip_from 195.88.74.206;
 set_real_ip_from 198.251.84.163;
@@ -844,6 +844,7 @@ set_real_ip_from 205.185.124.176;
 set_real_ip_from 205.185.124.193;
 set_real_ip_from 205.185.127.231;
 set_real_ip_from 206.206.127.213;
+set_real_ip_from 209.135.170.167;
 set_real_ip_from 209.141.32.181;
 set_real_ip_from 209.141.32.198;
 set_real_ip_from 209.141.37.94;
@@ -934,7 +935,6 @@ set_real_ip_from 23.154.177.16;
 set_real_ip_from 23.154.177.17;
 set_real_ip_from 23.154.177.18;
 set_real_ip_from 23.154.177.19;
-set_real_ip_from 23.154.177.2;
 set_real_ip_from 23.154.177.20;
 set_real_ip_from 23.154.177.21;
 set_real_ip_from 23.154.177.22;
@@ -945,15 +945,9 @@ set_real_ip_from 23.154.177.26;
 set_real_ip_from 23.154.177.27;
 set_real_ip_from 23.154.177.28;
 set_real_ip_from 23.154.177.29;
-set_real_ip_from 23.154.177.3;
 set_real_ip_from 23.154.177.30;
 set_real_ip_from 23.154.177.31;
-set_real_ip_from 23.154.177.4;
-set_real_ip_from 23.154.177.5;
-set_real_ip_from 23.154.177.6;
-set_real_ip_from 23.154.177.7;
 set_real_ip_from 23.154.177.8;
-set_real_ip_from 23.154.177.9;
 set_real_ip_from 23.155.24.4;
 set_real_ip_from 23.155.8.104;
 set_real_ip_from 23.173.216.67;
@@ -984,6 +978,7 @@ set_real_ip_from 2602:2da:0:33:5054:ff:fe6c:39dc;
 set_real_ip_from 2602:2da:0:34:5054:ff:fe7e:7c21;
 set_real_ip_from 2602:2e5::104;
 set_real_ip_from 2602:2e6:0:4::;
+set_real_ip_from 2602:f9f3:0:2::17c;
 set_real_ip_from 2602:fc24:12:3f11:39ca:318:0:1;
 set_real_ip_from 2602:fc24:12:4870:39ca:318:0:1;
 set_real_ip_from 2602:fc24:12:81a6::1;
@@ -1101,7 +1096,6 @@ set_real_ip_from 2605:6400:30:f920:f523:28ef:3617:8b86;
 set_real_ip_from 2605:6400:40:fde8:11c7:119b:aaf9:2722;
 set_real_ip_from 2605:6400:40:fe09::2;
 set_real_ip_from 2605:6400:d814:1b8::4;
-set_real_ip_from 2605:aa80:0:9::3;
 set_real_ip_from 2607:5300:201:3100::2373;
 set_real_ip_from 2607:5300:203:b45b::;
 set_real_ip_from 2607:5300:205:200::3dde;
@@ -1453,7 +1447,7 @@ set_real_ip_from 2a0b:f4c2::7;
 set_real_ip_from 2a0b:f4c2::8;
 set_real_ip_from 2a0b:f4c2::9;
 set_real_ip_from 2a0c:2500:571:e95:ac02:20d9:b7ed:7819;
-set_real_ip_from 2a0c:5700:3133:1705:be24:11ff:fe0f:9e53;
+set_real_ip_from 2a0c:5700:3133:1705:be24:11ff:fe87:1bec;
 set_real_ip_from 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 set_real_ip_from 2a0c:e300::23;
 set_real_ip_from 2a0d:bbc7:0:1::254;
@@ -1553,6 +1547,7 @@ set_real_ip_from 2a12:a800:2:1:45:80:158:27;
 set_real_ip_from 2a12:bec4:11d3:4a89::1;
 set_real_ip_from 2a12:d8c0:109a:9001::7;
 set_real_ip_from 2a12:dd47:8513::11;
+set_real_ip_from 2a12:dd47:8513::2;
 set_real_ip_from 2a13:d207:0:461::1;
 set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.13.195.22;
@@ -1576,7 +1571,6 @@ set_real_ip_from 45.118.133.44;
 set_real_ip_from 45.12.3.80;
 set_real_ip_from 45.128.133.242;
 set_real_ip_from 45.129.84.246;
-set_real_ip_from 45.129.84.249;
 set_real_ip_from 45.132.246.245;
 set_real_ip_from 45.134.225.36;
 set_real_ip_from 45.138.16.107;
