Update lists at 20241120-0900

--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -162,6 +162,7 @@ deny 154.213.185.230;
 deny 154.213.185.254;
 deny 154.213.187.66;
 deny 154.213.187.98;
+deny 154.216.16.12;
 deny 154.216.16.13;
 deny 154.216.16.14;
 deny 154.216.16.16;
@@ -188,7 +189,6 @@ deny 162.19.214.213;
 deny 162.210.173.17;
 deny 162.216.18.62;
 deny 162.247.72.192;
-deny 162.247.72.199;
 deny 162.247.74.200;
 deny 162.247.74.201;
 deny 162.247.74.202;
@@ -310,7 +310,6 @@ deny 185.153.197.227;
 deny 185.154.110.142;
 deny 185.154.110.17;
 deny 185.165.169.239;
-deny 185.165.169.42;
 deny 185.165.171.14;
 deny 185.165.171.84;
 deny 185.170.114.25;
@@ -675,7 +674,7 @@ deny 195.47.238.83;
 deny 195.47.238.84;
 deny 195.47.238.86;
 deny 195.47.238.87;
-deny 195.47.238.88;
+deny 195.47.238.90;
 deny 195.47.238.91;
 deny 195.80.151.242;
 deny 195.88.74.206;
@@ -948,8 +947,8 @@ deny 23.154.177.29;
 deny 23.154.177.30;
 deny 23.154.177.31;
 deny 23.154.177.8;
+deny 23.154.177.9;
 deny 23.155.24.4;
-deny 23.155.8.104;
 deny 23.173.216.67;
 deny 23.184.48.48;
 deny 23.94.211.25;
@@ -976,7 +975,6 @@ deny 2600:3c03::f03c:95ff:fe5d:562;
 deny 2600:3c0a::f03c:95ff:fe5d:a877;
 deny 2602:2da:0:33:5054:ff:fe6c:39dc;
 deny 2602:2da:0:34:5054:ff:fe7e:7c21;
-deny 2602:2e5::104;
 deny 2602:2e6:0:4::;
 deny 2602:f9f3:0:2::17c;
 deny 2602:fc24:12:3f11:39ca:318:0:1;
@@ -991,7 +989,6 @@ deny 2602:fc24:19:eb06::dead;
 deny 2602:fccf:310:1::a;
 deny 2602:fccf:310:1::b;
 deny 2602:fccf:310:1::c;
-deny 2602:fef9:100:1100::199;
 deny 2604:2dc0:101:200::162b;
 deny 2604:2dc0:101:200::1dd3;
 deny 2604:2dc0:202:300::ed3;
@@ -1447,6 +1444,7 @@ deny 2a0b:f4c2::7;
 deny 2a0b:f4c2::8;
 deny 2a0b:f4c2::9;
 deny 2a0c:2500:571:e95:ac02:20d9:b7ed:7819;
+deny 2a0c:5700:3133:1705:be24:11ff:fe4e:df9e;
 deny 2a0c:5700:3133:1705:be24:11ff:fe87:1bec;
 deny 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 deny 2a0c:e300::23;
