--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -162,6 +162,7 @@ allow 154.213.185.230;
 allow 154.213.185.254;
 allow 154.213.187.66;
 allow 154.213.187.98;
+allow 154.216.16.12;
 allow 154.216.16.13;
 allow 154.216.16.14;
 allow 154.216.16.16;
@@ -188,7 +189,6 @@ allow 162.19.214.213;
 allow 162.210.173.17;
 allow 162.216.18.62;
 allow 162.247.72.192;
-allow 162.247.72.199;
 allow 162.247.74.200;
 allow 162.247.74.201;
 allow 162.247.74.202;
@@ -310,7 +310,6 @@ allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
-allow 185.165.169.42;
 allow 185.165.171.14;
 allow 185.165.171.84;
 allow 185.170.114.25;
@@ -675,7 +674,7 @@ allow 195.47.238.83;
 allow 195.47.238.84;
 allow 195.47.238.86;
 allow 195.47.238.87;
-allow 195.47.238.88;
+allow 195.47.238.90;
 allow 195.47.238.91;
 allow 195.80.151.242;
 allow 195.88.74.206;
@@ -948,8 +947,8 @@ allow 23.154.177.29;
 allow 23.154.177.30;
 allow 23.154.177.31;
 allow 23.154.177.8;
+allow 23.154.177.9;
 allow 23.155.24.4;
-allow 23.155.8.104;
 allow 23.173.216.67;
 allow 23.184.48.48;
 allow 23.94.211.25;
@@ -976,7 +975,6 @@ allow 2600:3c03::f03c:95ff:fe5d:562;
 allow 2600:3c0a::f03c:95ff:fe5d:a877;
 allow 2602:2da:0:33:5054:ff:fe6c:39dc;
 allow 2602:2da:0:34:5054:ff:fe7e:7c21;
-allow 2602:2e5::104;
 allow 2602:2e6:0:4::;
 allow 2602:f9f3:0:2::17c;
 allow 2602:fc24:12:3f11:39ca:318:0:1;
@@ -991,7 +989,6 @@ allow 2602:fc24:19:eb06::dead;
 allow 2602:fccf:310:1::a;
 allow 2602:fccf:310:1::b;
 allow 2602:fccf:310:1::c;
-allow 2602:fef9:100:1100::199;
 allow 2604:2dc0:101:200::162b;
 allow 2604:2dc0:101:200::1dd3;
 allow 2604:2dc0:202:300::ed3;
@@ -1447,6 +1444,7 @@ allow 2a0b:f4c2::7;
 allow 2a0b:f4c2::8;
 allow 2a0b:f4c2::9;
 allow 2a0c:2500:571:e95:ac02:20d9:b7ed:7819;
+allow 2a0c:5700:3133:1705:be24:11ff:fe4e:df9e;
 allow 2a0c:5700:3133:1705:be24:11ff:fe87:1bec;
 allow 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 allow 2a0c:e300::23;
