--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -144,6 +144,7 @@ allow 144.172.118.4;
 allow 144.172.118.55;
 allow 144.172.118.73;
 allow 146.59.126.232;
+allow 147.45.44.55;
 allow 147.45.78.34;
 allow 148.113.152.91;
 allow 149.202.79.101;
@@ -152,7 +153,6 @@ allow 149.56.22.133;
 allow 149.56.44.47;
 allow 15.204.238.148;
 allow 154.16.116.61;
-allow 154.213.184.42;
 allow 154.213.184.5;
 allow 154.213.185.133;
 allow 154.213.185.165;
@@ -162,7 +162,6 @@ allow 154.213.185.230;
 allow 154.213.185.254;
 allow 154.213.187.66;
 allow 154.213.187.98;
-allow 154.216.16.12;
 allow 154.216.16.13;
 allow 154.216.16.14;
 allow 154.216.16.16;
@@ -189,6 +188,7 @@ allow 162.19.214.213;
 allow 162.210.173.17;
 allow 162.216.18.62;
 allow 162.247.72.192;
+allow 162.247.72.199;
 allow 162.247.74.200;
 allow 162.247.74.201;
 allow 162.247.74.202;
@@ -310,6 +310,7 @@ allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
+allow 185.165.169.42;
 allow 185.165.171.14;
 allow 185.165.171.84;
 allow 185.170.114.25;
@@ -674,7 +675,7 @@ allow 195.47.238.83;
 allow 195.47.238.84;
 allow 195.47.238.86;
 allow 195.47.238.87;
-allow 195.47.238.90;
+allow 195.47.238.89;
 allow 195.47.238.91;
 allow 195.80.151.242;
 allow 195.88.74.206;
@@ -843,7 +844,6 @@ allow 205.185.124.176;
 allow 205.185.124.193;
 allow 205.185.127.231;
 allow 206.206.127.213;
-allow 209.135.170.167;
 allow 209.141.32.181;
 allow 209.141.32.198;
 allow 209.141.37.94;
@@ -927,7 +927,6 @@ allow 23.153.248.34;
 allow 23.154.177.10;
 allow 23.154.177.11;
 allow 23.154.177.12;
-allow 23.154.177.13;
 allow 23.154.177.14;
 allow 23.154.177.15;
 allow 23.154.177.16;
@@ -946,9 +945,9 @@ allow 23.154.177.28;
 allow 23.154.177.29;
 allow 23.154.177.30;
 allow 23.154.177.31;
-allow 23.154.177.8;
 allow 23.154.177.9;
 allow 23.155.24.4;
+allow 23.155.8.104;
 allow 23.173.216.67;
 allow 23.184.48.48;
 allow 23.94.211.25;
@@ -975,8 +974,8 @@ allow 2600:3c03::f03c:95ff:fe5d:562;
 allow 2600:3c0a::f03c:95ff:fe5d:a877;
 allow 2602:2da:0:33:5054:ff:fe6c:39dc;
 allow 2602:2da:0:34:5054:ff:fe7e:7c21;
+allow 2602:2e5::104;
 allow 2602:2e6:0:4::;
-allow 2602:f9f3:0:2::17c;
 allow 2602:fc24:12:3f11:39ca:318:0:1;
 allow 2602:fc24:12:4870:39ca:318:0:1;
 allow 2602:fc24:12:81a6::1;
@@ -989,6 +988,7 @@ allow 2602:fc24:19:eb06::dead;
 allow 2602:fccf:310:1::a;
 allow 2602:fccf:310:1::b;
 allow 2602:fccf:310:1::c;
+allow 2602:fef9:100:1100::199;
 allow 2604:2dc0:101:200::162b;
 allow 2604:2dc0:101:200::1dd3;
 allow 2604:2dc0:202:300::ed3;
@@ -1444,9 +1444,10 @@ allow 2a0b:f4c2::7;
 allow 2a0b:f4c2::8;
 allow 2a0b:f4c2::9;
 allow 2a0c:2500:571:e95:ac02:20d9:b7ed:7819;
-allow 2a0c:5700:3133:1705:be24:11ff:fe4e:df9e;
 allow 2a0c:5700:3133:1705:be24:11ff:fe87:1bec;
+allow 2a0c:5700:3133:1705:be24:11ff:fead:5be0;
 allow 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
+allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:e300::23;
 allow 2a0d:bbc7:0:1::254;
 allow 2a0d:bbc7:0:1::320;
@@ -1545,7 +1546,6 @@ allow 2a12:a800:2:1:45:80:158:27;
 allow 2a12:bec4:11d3:4a89::1;
 allow 2a12:d8c0:109a:9001::7;
 allow 2a12:dd47:8513::11;
-allow 2a12:dd47:8513::2;
 allow 2a13:d207:0:461::1;
 allow 31.129.22.65;
 allow 31.13.195.22;
@@ -1569,6 +1569,7 @@ allow 45.118.133.44;
 allow 45.12.3.80;
 allow 45.128.133.242;
 allow 45.129.84.246;
+allow 45.129.84.249;
 allow 45.132.246.245;
 allow 45.134.225.36;
 allow 45.138.16.107;
@@ -1755,6 +1756,7 @@ allow 84.239.46.144;
 allow 84.247.165.51;
 allow 84.252.120.163;
 allow 85.10.210.197;
+allow 85.239.41.130;
 allow 85.93.218.204;
 allow 87.118.110.27;
 allow 87.118.116.103;
@@ -1774,7 +1776,6 @@ allow 89.147.110.118;
 allow 89.147.110.154;
 allow 89.147.110.82;
 allow 89.147.111.87;
-allow 89.168.17.166;
 allow 89.187.143.31;
 allow 89.221.215.139;
 allow 89.221.217.206;
