--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -55,6 +55,7 @@ allow 107.189.14.4;
 allow 107.189.14.43;
 allow 107.189.1.9;
 allow 107.189.2.108;
+allow 107.189.2.206;
 allow 107.189.29.103;
 allow 107.189.29.184;
 allow 107.189.30.236;
@@ -115,6 +116,7 @@ allow 130.193.15.186;
 allow 138.59.18.110;
 allow 139.99.172.11;
 allow 139.99.8.57;
+allow 141.105.130.8;
 allow 141.11.25.44;
 allow 141.98.11.62;
 allow 142.171.12.88;
@@ -133,7 +135,6 @@ allow 149.56.22.133;
 allow 149.56.44.47;
 allow 15.204.238.148;
 allow 154.16.116.61;
-allow 154.213.184.42;
 allow 154.213.184.5;
 allow 154.213.185.133;
 allow 154.213.185.165;
@@ -144,7 +145,6 @@ allow 154.213.185.254;
 allow 154.213.187.66;
 allow 154.213.187.98;
 allow 154.213.188.6;
-allow 154.216.16.12;
 allow 154.216.16.13;
 allow 154.216.16.14;
 allow 154.216.16.16;
@@ -244,7 +244,7 @@ allow 179.43.159.201;
 allow 179.43.159.78;
 allow 179.43.182.232;
 allow 179.43.182.58;
-allow 179.55.91.189;
+allow 179.55.88.178;
 allow 180.150.226.99;
 allow 184.75.221.171;
 allow 185.100.85.132;
@@ -287,6 +287,7 @@ allow 185.129.62.63;
 allow 185.130.44.108;
 allow 185.130.44.43;
 allow 185.130.47.58;
+allow 185.132.176.180;
 allow 185.132.53.12;
 allow 185.132.53.42;
 allow 185.142.239.49;
@@ -295,7 +296,6 @@ allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
-allow 185.165.169.42;
 allow 185.165.171.14;
 allow 185.165.171.84;
 allow 185.170.114.25;
@@ -656,8 +656,7 @@ allow 195.47.238.83;
 allow 195.47.238.84;
 allow 195.47.238.86;
 allow 195.47.238.87;
-allow 195.47.238.92;
-allow 195.47.238.93;
+allow 195.47.238.88;
 allow 195.80.151.242;
 allow 195.88.74.206;
 allow 198.251.84.163;
@@ -1398,10 +1397,9 @@ allow 2a0b:f4c2::6;
 allow 2a0b:f4c2::7;
 allow 2a0b:f4c2::8;
 allow 2a0b:f4c2::9;
-allow 2a0c:5700:3133:1705:be24:11ff:fe0f:9e53;
-allow 2a0c:5700:3133:1705:be24:11ff:fe37:3cb;
 allow 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 allow 2a0c:5cc0:1:1::293c:1518;
+allow 2a0c:b641:6f0:8a::2;
 allow 2a0c:e300::23;
 allow 2a0d:bbc7:0:1::254;
 allow 2a0d:bbc7:0:1::320;
@@ -1500,7 +1498,6 @@ allow 2a12:a800:2:1:45:80:158:27;
 allow 2a12:bec4:11d3:4a89::1;
 allow 2a12:d8c0:109a:9001::7;
 allow 2a12:dd47:8513::11;
-allow 2a12:dd47:8513::2;
 allow 2a13:d207:0:461::1;
 allow 31.129.22.65;
 allow 31.13.195.22;
@@ -1524,6 +1521,7 @@ allow 45.118.133.44;
 allow 45.12.3.80;
 allow 45.128.133.242;
 allow 45.129.84.246;
+allow 45.129.84.249;
 allow 45.132.246.245;
 allow 45.134.225.36;
 allow 45.138.16.107;
