--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -135,6 +135,7 @@ allow 149.56.22.133;
 allow 149.56.44.47;
 allow 15.204.238.148;
 allow 154.16.116.61;
+allow 154.213.184.42;
 allow 154.213.184.5;
 allow 154.213.185.133;
 allow 154.213.185.165;
@@ -145,6 +146,7 @@ allow 154.213.185.254;
 allow 154.213.187.66;
 allow 154.213.187.98;
 allow 154.213.188.6;
+allow 154.216.16.12;
 allow 154.216.16.13;
 allow 154.216.16.14;
 allow 154.216.16.16;
@@ -292,10 +294,12 @@ allow 185.132.53.12;
 allow 185.132.53.42;
 allow 185.142.239.49;
 allow 185.146.232.234;
+allow 185.149.146.4;
 allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
+allow 185.165.169.42;
 allow 185.165.171.14;
 allow 185.165.171.84;
 allow 185.170.114.25;
@@ -656,7 +660,8 @@ allow 195.47.238.83;
 allow 195.47.238.84;
 allow 195.47.238.86;
 allow 195.47.238.87;
-allow 195.47.238.88;
+allow 195.47.238.90;
+allow 195.47.238.91;
 allow 195.80.151.242;
 allow 195.88.74.206;
 allow 198.251.84.163;
@@ -901,7 +906,6 @@ allow 23.153.248.33;
 allow 23.153.248.34;
 allow 23.154.177.10;
 allow 23.154.177.11;
-allow 23.154.177.12;
 allow 23.154.177.13;
 allow 23.154.177.14;
 allow 23.154.177.15;
@@ -1397,6 +1401,8 @@ allow 2a0b:f4c2::6;
 allow 2a0b:f4c2::7;
 allow 2a0b:f4c2::8;
 allow 2a0b:f4c2::9;
+allow 2a0c:5700:3133:1705:be24:11ff:fe4e:df9e;
+allow 2a0c:5700:3133:1705:be24:11ff:fe87:1bec;
 allow 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:b641:6f0:8a::2;
@@ -1498,6 +1504,7 @@ allow 2a12:a800:2:1:45:80:158:27;
 allow 2a12:bec4:11d3:4a89::1;
 allow 2a12:d8c0:109a:9001::7;
 allow 2a12:dd47:8513::11;
+allow 2a12:dd47:8513::2;
 allow 2a13:d207:0:461::1;
 allow 31.129.22.65;
 allow 31.13.195.22;
@@ -1521,7 +1528,6 @@ allow 45.118.133.44;
 allow 45.12.3.80;
 allow 45.128.133.242;
 allow 45.129.84.246;
-allow 45.129.84.249;
 allow 45.132.246.245;
 allow 45.134.225.36;
 allow 45.138.16.107;
@@ -1583,6 +1589,7 @@ allow 45.83.21.193;
 allow 45.84.107.182;
 allow 45.84.107.198;
 allow 45.84.107.76;
+allow 45.94.31.180;
 allow 45.94.31.68;
 allow 45.95.169.130;
 allow 45.95.169.223;
@@ -1618,6 +1625,7 @@ allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.255.100.219;
 allow 5.255.100.227;
+allow 5.255.100.26;
 allow 5.255.103.235;
 allow 5.255.104.202;
 allow 5.255.111.64;
@@ -1629,6 +1637,7 @@ allow 5.255.120.205;
 allow 5.255.121.71;
 allow 5.255.123.158;
 allow 5.255.123.164;
+allow 5.255.124.150;
 allow 5.255.125.196;
 allow 5.255.125.41;
 allow 5.255.127.222;
