--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -135,6 +135,7 @@ set_real_ip_from 149.56.22.133;
 set_real_ip_from 149.56.44.47;
 set_real_ip_from 15.204.238.148;
 set_real_ip_from 154.16.116.61;
+set_real_ip_from 154.213.184.42;
 set_real_ip_from 154.213.184.5;
 set_real_ip_from 154.213.185.133;
 set_real_ip_from 154.213.185.165;
@@ -145,6 +146,7 @@ set_real_ip_from 154.213.185.254;
 set_real_ip_from 154.213.187.66;
 set_real_ip_from 154.213.187.98;
 set_real_ip_from 154.213.188.6;
+set_real_ip_from 154.216.16.12;
 set_real_ip_from 154.216.16.13;
 set_real_ip_from 154.216.16.14;
 set_real_ip_from 154.216.16.16;
@@ -292,10 +294,12 @@ set_real_ip_from 185.132.53.12;
 set_real_ip_from 185.132.53.42;
 set_real_ip_from 185.142.239.49;
 set_real_ip_from 185.146.232.234;
+set_real_ip_from 185.149.146.4;
 set_real_ip_from 185.153.197.227;
 set_real_ip_from 185.154.110.142;
 set_real_ip_from 185.154.110.17;
 set_real_ip_from 185.165.169.239;
+set_real_ip_from 185.165.169.42;
 set_real_ip_from 185.165.171.14;
 set_real_ip_from 185.165.171.84;
 set_real_ip_from 185.170.114.25;
@@ -656,7 +660,8 @@ set_real_ip_from 195.47.238.83;
 set_real_ip_from 195.47.238.84;
 set_real_ip_from 195.47.238.86;
 set_real_ip_from 195.47.238.87;
-set_real_ip_from 195.47.238.88;
+set_real_ip_from 195.47.238.90;
+set_real_ip_from 195.47.238.91;
 set_real_ip_from 195.80.151.242;
 set_real_ip_from 195.88.74.206;
 set_real_ip_from 198.251.84.163;
@@ -901,7 +906,6 @@ set_real_ip_from 23.153.248.33;
 set_real_ip_from 23.153.248.34;
 set_real_ip_from 23.154.177.10;
 set_real_ip_from 23.154.177.11;
-set_real_ip_from 23.154.177.12;
 set_real_ip_from 23.154.177.13;
 set_real_ip_from 23.154.177.14;
 set_real_ip_from 23.154.177.15;
@@ -1397,6 +1401,8 @@ set_real_ip_from 2a0b:f4c2::6;
 set_real_ip_from 2a0b:f4c2::7;
 set_real_ip_from 2a0b:f4c2::8;
 set_real_ip_from 2a0b:f4c2::9;
+set_real_ip_from 2a0c:5700:3133:1705:be24:11ff:fe4e:df9e;
+set_real_ip_from 2a0c:5700:3133:1705:be24:11ff:fe87:1bec;
 set_real_ip_from 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 set_real_ip_from 2a0c:5cc0:1:1::293c:1518;
 set_real_ip_from 2a0c:b641:6f0:8a::2;
@@ -1498,6 +1504,7 @@ set_real_ip_from 2a12:a800:2:1:45:80:158:27;
 set_real_ip_from 2a12:bec4:11d3:4a89::1;
 set_real_ip_from 2a12:d8c0:109a:9001::7;
 set_real_ip_from 2a12:dd47:8513::11;
+set_real_ip_from 2a12:dd47:8513::2;
 set_real_ip_from 2a13:d207:0:461::1;
 set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.13.195.22;
@@ -1521,7 +1528,6 @@ set_real_ip_from 45.118.133.44;
 set_real_ip_from 45.12.3.80;
 set_real_ip_from 45.128.133.242;
 set_real_ip_from 45.129.84.246;
-set_real_ip_from 45.129.84.249;
 set_real_ip_from 45.132.246.245;
 set_real_ip_from 45.134.225.36;
 set_real_ip_from 45.138.16.107;
@@ -1583,6 +1589,7 @@ set_real_ip_from 45.83.21.193;
 set_real_ip_from 45.84.107.182;
 set_real_ip_from 45.84.107.198;
 set_real_ip_from 45.84.107.76;
+set_real_ip_from 45.94.31.180;
 set_real_ip_from 45.94.31.68;
 set_real_ip_from 45.95.169.130;
 set_real_ip_from 45.95.169.223;
@@ -1618,6 +1625,7 @@ set_real_ip_from 51.91.18.151;
 set_real_ip_from 5.196.95.34;
 set_real_ip_from 5.255.100.219;
 set_real_ip_from 5.255.100.227;
+set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.103.235;
 set_real_ip_from 5.255.104.202;
 set_real_ip_from 5.255.111.64;
@@ -1629,6 +1637,7 @@ set_real_ip_from 5.255.120.205;
 set_real_ip_from 5.255.121.71;
 set_real_ip_from 5.255.123.158;
 set_real_ip_from 5.255.123.164;
+set_real_ip_from 5.255.124.150;
 set_real_ip_from 5.255.125.196;
 set_real_ip_from 5.255.125.41;
 set_real_ip_from 5.255.127.222;
