Update lists at 20241121-1200

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -56,7 +56,6 @@ allow 107.189.14.4;
 allow 107.189.14.43;
 allow 107.189.1.9;
 allow 107.189.2.108;
-allow 107.189.2.206;
 allow 107.189.29.103;
 allow 107.189.29.184;
 allow 107.189.30.236;
@@ -123,7 +122,6 @@ allow 141.98.11.62;
 allow 142.171.12.88;
 allow 142.44.234.69;
 allow 143.110.156.176;
-allow 144.126.135.81;
 allow 144.172.118.4;
 allow 144.172.118.55;
 allow 144.172.118.73;
@@ -136,6 +134,7 @@ allow 149.56.22.133;
 allow 149.56.44.47;
 allow 15.204.238.148;
 allow 154.16.116.61;
+allow 154.213.184.42;
 allow 154.213.184.5;
 allow 154.213.185.133;
 allow 154.213.185.165;
@@ -146,26 +145,7 @@ allow 154.213.185.254;
 allow 154.213.187.66;
 allow 154.213.187.98;
 allow 154.213.188.6;
-allow 154.216.16.13;
-allow 154.216.16.14;
-allow 154.216.16.16;
-allow 154.216.16.18;
-allow 154.216.16.20;
-allow 154.216.16.21;
-allow 154.216.16.23;
-allow 154.216.16.24;
-allow 154.216.16.31;
-allow 154.216.17.140;
-allow 154.216.17.163;
-allow 154.216.17.57;
-allow 154.216.17.71;
 allow 154.216.17.94;
-allow 154.216.18.191;
-allow 154.216.18.227;
-allow 154.216.18.243;
-allow 154.216.19.10;
-allow 154.216.19.230;
-allow 154.216.19.232;
 allow 154.26.159.157;
 allow 158.69.1.13;
 allow 160.119.249.240;
@@ -268,6 +248,7 @@ allow 185.107.57.66;
 allow 185.112.144.11;
 allow 185.112.146.167;
 allow 185.113.128.30;
+allow 185.117.215.9;
 allow 185.123.102.122;
 allow 185.123.102.54;
 allow 185.129.61.1;
@@ -317,7 +298,6 @@ allow 185.195.71.6;
 allow 185.195.71.7;
 allow 185.195.71.8;
 allow 185.195.71.9;
-allow 185.203.217.164;
 allow 185.207.107.130;
 allow 185.207.107.216;
 allow 185.220.100.240;
@@ -614,7 +594,6 @@ allow 193.105.134.150;
 allow 193.105.134.155;
 allow 193.142.147.233;
 allow 193.142.147.69;
-allow 193.182.96.246;
 allow 193.189.100.194;
 allow 193.189.100.195;
 allow 193.189.100.196;
@@ -651,15 +630,13 @@ allow 194.87.115.187;
 allow 195.160.220.104;
 allow 195.176.3.23;
 allow 195.176.3.24;
-allow 195.179.231.215;
-allow 195.179.231.32;
 allow 195.47.238.82;
 allow 195.47.238.83;
 allow 195.47.238.84;
 allow 195.47.238.86;
 allow 195.47.238.87;
 allow 195.47.238.89;
-allow 195.47.238.91;
+allow 195.47.238.93;
 allow 195.80.151.242;
 allow 195.88.74.206;
 allow 198.251.84.163;
@@ -667,7 +644,6 @@ allow 198.251.84.237;
 allow 198.251.88.18;
 allow 198.251.89.96;
 allow 198.58.107.53;
-allow 198.7.124.113;
 allow 198.96.155.3;
 allow 198.98.48.33;
 allow 198.98.48.35;
@@ -910,7 +886,6 @@ allow 23.154.177.16;
 allow 23.154.177.17;
 allow 23.154.177.18;
 allow 23.154.177.19;
-allow 23.154.177.2;
 allow 23.154.177.20;
 allow 23.154.177.21;
 allow 23.154.177.22;
@@ -921,13 +896,8 @@ allow 23.154.177.26;
 allow 23.154.177.27;
 allow 23.154.177.28;
 allow 23.154.177.29;
-allow 23.154.177.3;
 allow 23.154.177.30;
 allow 23.154.177.31;
-allow 23.154.177.4;
-allow 23.154.177.5;
-allow 23.154.177.6;
-allow 23.154.177.7;
 allow 23.154.177.8;
 allow 23.154.177.9;
 allow 23.155.24.4;
@@ -1220,6 +1190,7 @@ allow 2a06:1700:0:50::11;
 allow 2a06:1700:3:19::1;
 allow 2a06:1700:3:34::1;
 allow 2a06:1700:4:14::1;
+allow 2a06:8781::9;
 allow 2a06:d380:0:103::62;
 allow 2a06:d380:0:103::63;
 allow 2a06:e80:3000:1:bad:babe:ca11:911;
@@ -1398,7 +1369,7 @@ allow 2a0b:f4c2::6;
 allow 2a0b:f4c2::7;
 allow 2a0b:f4c2::8;
 allow 2a0b:f4c2::9;
-allow 2a0c:5700:3133:1705:be24:11ff:fe87:1bec;
+allow 2a0c:5700:3133:1705:be24:11ff:fe37:3cb;
 allow 2a0c:5700:3133:1705:be24:11ff:fead:5be0;
 allow 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 allow 2a0c:5cc0:1:1::293c:1518;
@@ -1501,6 +1472,7 @@ allow 2a12:a800:2:1:45:80:158:27;
 allow 2a12:bec4:11d3:4a89::1;
 allow 2a12:d8c0:109a:9001::7;
 allow 2a12:dd47:8513::11;
+allow 2a12:dd47:8513::2;
 allow 2a13:d207:0:461::1;
 allow 31.129.22.65;
 allow 31.13.195.22;
@@ -1524,6 +1496,7 @@ allow 45.118.133.44;
 allow 45.12.3.80;
 allow 45.128.133.242;
 allow 45.129.84.246;
+allow 45.129.84.249;
 allow 45.132.246.245;
 allow 45.134.225.36;
 allow 45.138.16.107;
@@ -1581,7 +1554,6 @@ allow 45.80.158.23;
 allow 45.80.158.27;
 allow 45.8.22.207;
 allow 45.83.104.137;
-allow 45.83.21.193;
 allow 45.84.107.182;
 allow 45.84.107.198;
 allow 45.84.107.76;
@@ -1723,7 +1695,6 @@ allow 89.147.110.118;
 allow 89.147.110.154;
 allow 89.147.110.82;
 allow 89.147.111.87;
-allow 89.168.17.166;
 allow 89.187.143.31;
 allow 89.221.215.139;
 allow 89.221.217.206;
@@ -1734,7 +1705,6 @@ allow 89.58.26.216;
 allow 89.58.41.156;
 allow 91.132.144.59;
 allow 91.139.160.150;
-allow 91.188.254.218;
 allow 91.202.5.104;
 allow 91.203.144.194;
 allow 91.203.145.116;
